# oxim-setup

./: AUTHORS  ChangeLog  Makefile-java  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  oxim-setup.1  oxim-setup.desktop
po/: Makefile.in.in  Makevars  POTFILES  POTFILES.in  oxim-setup.pot  zh_CN.gmo  zh_CN.po  zh_HK.gmo  zh_HK.po
src/gtk/: Makefile.am  Makefile.in
src/gtk/config/: gtkrc.new
src/gtk/gui/: oxim-setup-glade.xml.in  oxim-setup-glade.xml.origin
src/gtk/include/: chewing.h  default_input_methods.h  g_mirrors_site.h  gencin.h  globalsetting.h  im_default_value.h  installim_core_embassador.h  installim_gui_embassador.h  oxim_setup_gtk_global.h  phrase_record.h
src/gtk/src/: chewing.c  default_input_methods.c  g_mirrors_site.c  im_default_value.c  main.c  oxim_setting_and_config.c  utils.c
src/include/: IC.h  fkey.h  gui.h  module.h  oxim.h  oximtool.h
src/oxim-setup-gambas/: .directory  .project  .settings  DownloaderModules.module  FMain.form  FormAttrib.form  FormAttribChewing.form  FormInstallOxim.form  FormKeySetting.form  InputDialog.form  Makefile  Makefile.am  Makefile.in  ReNameTexts.module  oxim-setup-gambas.gambas
src/oxim-setup-gambas/.gambas/: DOWNLOADERMODULES  FMAIN  FORMATTRIB  FORMATTRIBCHEWING  FORMINSTALLOXIM  FORMKEYSETTING  GLOBALS  INPUTDIALOG  RENAMETEXTS
src/oxim-setup-gambas/.lang/: DownloaderModules.pot  FMain.pot  FormAttrib.pot  FormAttribChewing.pot  FormInstallOxim.pot  FormKeySetting.pot  GLOBALS.pot  InputDialog.pot  ReNameTexts.pot  zh_CN.gmo  zh_CN.mo  zh_CN.po  zh_TW.gmo  zh_TW.mo  zh_TW.mp  zh_TW.po
src/oxim-setup-gtk/: Makefile.am  Makefile.in
src/oxim-setup-gtk/gui/: oxim-setup-glade.glade.in  oxim-setup-glade.xml
src/oxim-setup-gtk/include/: g_oxim_conf.h  installim.h  oxim_setting_and_config.h  tab_info.h  utils.h
src/oxim-setup-gtk/src/: cin.list  g_oxim_conf.c  gencin.c  globalsetting.c  installim.c  phrase_record.c  tab_info.c
src/oxim-setup-java/: Makefile.am  Makefile.in
src/oxim-setup-java/src/: fb.form  fb.java  fb2.form  fb2.java  ff3.form  ff3.java  ff4.form  ff4.java  manifest.mf  oxim-setup  setup.form  setup.java
src/oxim-setup-oxzilla/: Makefile.am  Makefile.in
src/oxim-setup-oxzilla/setup/: configs.var.js  index.html  index.html.orig
src/oxim-setup-oxzilla/setup/class/: chewing.class.js  dialogs.class.js  fontlist.class.js  gencin.class.js  globalsettings.class.js  imlist.class.js  installim.class.js  pharse.class.js  sunpinyin.class.js
src/oxim-setup-oxzilla/setup/css/: style.css
src/oxim-setup-oxzilla/setup/include/: dialogs.html
src/oxim-setup-php/: Makefile.am  Makefile.in
src/oxim-setup-php/src/: init.php  oxim-setup.glade  oxim-setup.glade.in  oxim-setup.php
src/oxim-setup-php/src/gui/: msg_dialog.php  notebook_font.php  notebook_tables.php  treeview_pharse.php  treeview_tables.php  window_chewing_property.php  window_common_setting.php  window_install_tab.php  window_main.php  window_property.php
src/oxim-setup-php/src/lib/: default_phr.php  libs.php  net_cin_table.php  tab_reader.php
src/oxim-setup-pygtk/: Makefile.am  Makefile.in
src/oxim-setup-pygtk/src/: Copyright  oxim-pytgtk-gui.py  oxim-setup-pygtk
src/oxim-setup-qt3/: Makefile.am  Makefile.in  Makefile.qt  Sunpinyin.ui  Sunpinyin.ui.h  chewing.h  chewing.ui  chewing.ui.h  common.h  gencin.h  gencin.ui  gencin.ui.h  globolsetting.h  globolsetting.ui  globolsetting.ui.h  installim.h  installim.ui  installim.ui.h  installim.ui.h.orig  main.cpp  oxim-setup-qt3.pro  oxim-setup.h  oxim-setup.ui  oxim-setup.ui.h
src/oxim-setup-qt4/: Makefile.am  Makefile.in  attribute.cpp  attribute.h  attribute.ui  chewingsetting.cpp  chewingsetting.h  chewingsetting.ui  cin.list  commonsetting.cpp  commonsetting.h  commonsetting.ui  install.cpp  install.h  install.ui  main.cpp  moc_attribute.cpp  oxim-setup-qt4.pro  oxim-setup.cpp  oxim-setup.h  oxim-setup.ui  ui_attribute.h  ui_chewingsetting.h  ui_commonsetting.h  ui_install.h  ui_oxim-setup.h
src/utils/: Makefile.am  Makefile.in  oxim-reload.cpp  oxim-setup  oxim-setup.in
